--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.8.3",
     "firebase": "^8.9.1",
     "react": "^17.0.2",
+    "react-collapsible": "^2.8.4",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^3.0.4",
     "react-scripts": "4.0.3",
