--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^3.0.4",
     "react-scripts": "4.0.3",
+    "react-timer-hook": "^3.0.5",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
   },
